--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/CharlieDoll/Challenge14/issues"
   },
-  "homepage": "https://github.com/CharlieDoll/Challenge14#readme"
+  "homepage": "https://github.com/CharlieDoll/Challenge14#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.7",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.28.0"
+  }
 }
