--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/CharlieDoll/Challenge14#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
+    "eslint": "^8.31.0",
+    "eslintrc": "^1.0.6",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
